Added tracing property

--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.r2dbc.url=r2dbc:postgresql://localhost:5432/test-table?currentSchema=test
 spring.r2dbc.username=postgres
 spring.r2dbc.password=password
 spring.data.r2dbc.repositories.enabled=true
-spring.r2dbc.initialization-mode=always
+
+management.tracing.sampling.probability=1
